// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation test suite renders first run screen 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenStack
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        nativeBackButtonDismissalEnabled={false}
        onAppear={[Function]}
        onDisappear={[Function]}
        onDismissed={[Function]}
        onHeaderBackButtonClicked={[Function]}
        onNativeDismissCancelled={[Function]}
        onTransitionProgress={[Function]}
        onWillDisappear={[Function]}
        replaceAnimation="push"
        stackPresentation="push"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        swipeDirection="horizontal"
      >
        <RNSScreenStackHeaderConfig
          backButtonInCustomView={false}
          backgroundColor="rgb(255, 255, 255)"
          color="#0891b2"
          direction="ltr"
          disableBackButtonMenu={false}
          hidden={false}
          hideBackButton={false}
          largeTitleHideShadow={false}
          title="Welcome"
          titleColor="rgb(28, 28, 30)"
          topInsetEnabled={false}
          translucent={false}
        />
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          style={
            {
              "flex": 1,
              "flexDirection": "column-reverse",
            }
          }
        >
          <View
            style={
              [
                {
                  "flex": 1,
                },
                {
                  "backgroundColor": "rgb(242, 242, 242)",
                },
                undefined,
              ]
            }
          >
            <View
              dataSet={{}}
              style={
                {
                  "marginTop": 8,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                }
              }
            >
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text />
                <View
                  dataSet={{}}
                  style={{}}
                />
                <Text />
                <View
                  dataSet={{}}
                  style={{}}
                />
                <View
                  dataSet={{}}
                  style={{}}
                >
                  <Text
                    dataSet={{}}
                    style={
                      {
                        "backgroundColor": undefined,
                        "color": "#db2777",
                        "fontFamily": undefined,
                        "fontSize": 20,
                        "fontStyle": "normal",
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 30,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Living Snow Project
                  </Text>
                  <View
                    dataSet={{}}
                    style={{}}
                  />
                  <Text
                    dataSet={{}}
                    style={
                      {
                        "backgroundColor": undefined,
                        "color": "#ec4899",
                        "fontFamily": undefined,
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 21,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    See pink snow? Let us know!
                  </Text>
                </View>
                <View
                  dataSet={{}}
                  style={{}}
                />
                <Text />
                <View
                  dataSet={{}}
                  style={{}}
                />
                <Text />
              </View>
              <Text
                dataSet={{}}
                style={
                  {
                    "backgroundColor": undefined,
                    "color": "#171717",
                    "fontFamily": undefined,
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 21,
                    "marginBottom": 8,
                    "marginTop": 8,
                    "textDecorationLine": undefined,
                  }
                }
              >
                Let us know who you are or remain anonymous. You can update your profile at any time in the Settings tab.
              </Text>
              <View
                dataSet={{}}
                isInvalid={false}
                isReadOnly={false}
                isRequired={false}
                style={
                  {
                    "width": "100%",
                  }
                }
              >
                <View
                  dataSet={{}}
                  feedbackId="field-3-feedback"
                  hasFeedbackText={true}
                  hasHelpText={false}
                  helpTextId="field-3-helptext"
                  isDisabled={false}
                  isInvalid={false}
                  isReadOnly={false}
                  isRequired={false}
                  labelId="field-3-label"
                  nativeID="field-3-label"
                  setHasFeedbackText={[Function]}
                  setHasHelpText={[Function]}
                  style={
                    {
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "marginBottom": 4,
                      "marginTop": 4,
                    }
                  }
                >
                  <Text
                    dataSet={{}}
                    style={
                      {
                        "backgroundColor": undefined,
                        "color": "#737373",
                        "fontFamily": undefined,
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 21,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Name
                  </Text>
                </View>
                <View
                  dataSet={{}}
                  isFocused={false}
                  style={
                    {
                      "alignItems": "center",
                      "borderColor": "#d4d4d4",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "overflow": "hidden",
                    }
                  }
                >
                  <TextInput
                    accessibilityDescribedBy="field-3-feedback"
                    accessible={true}
                    blurOnSubmit={false}
                    dataSet={{}}
                    disabled={false}
                    editable={true}
                    isRequired={false}
                    maxLength={50}
                    nativeID="field-3-input"
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder="Enter your name"
                    placeholderTextColor="#a3a3a3"
                    readOnly={false}
                    required={false}
                    returnKeyType="done"
                    secureTextEntry={false}
                    style={
                      {
                        "backgroundColor": "transparent",
                        "color": "#171717",
                        "flex": 1,
                        "fontFamily": undefined,
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "height": "100%",
                        "paddingBottom": 8,
                        "paddingLeft": 12,
                        "paddingRight": 12,
                        "paddingTop": 8,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                dataSet={{}}
                isInvalid={false}
                isReadOnly={false}
                isRequired={false}
                style={
                  {
                    "width": "100%",
                  }
                }
              >
                <View
                  dataSet={{}}
                  feedbackId="field-4-feedback"
                  hasFeedbackText={true}
                  hasHelpText={false}
                  helpTextId="field-4-helptext"
                  isDisabled={false}
                  isInvalid={false}
                  isReadOnly={false}
                  isRequired={false}
                  labelId="field-4-label"
                  nativeID="field-4-label"
                  setHasFeedbackText={[Function]}
                  setHasHelpText={[Function]}
                  style={
                    {
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "marginBottom": 4,
                      "marginTop": 4,
                    }
                  }
                >
                  <Text
                    dataSet={{}}
                    style={
                      {
                        "backgroundColor": undefined,
                        "color": "#737373",
                        "fontFamily": undefined,
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 21,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Organization
                  </Text>
                </View>
                <View
                  dataSet={{}}
                  isFocused={false}
                  style={
                    {
                      "alignItems": "center",
                      "borderColor": "#d4d4d4",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "overflow": "hidden",
                    }
                  }
                >
                  <TextInput
                    accessibilityDescribedBy="field-4-feedback"
                    accessible={true}
                    blurOnSubmit={true}
                    dataSet={{}}
                    disabled={false}
                    editable={true}
                    isRequired={false}
                    maxLength={50}
                    nativeID="field-4-input"
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder="Enter organization you belong to (if any)"
                    placeholderTextColor="#a3a3a3"
                    readOnly={false}
                    required={false}
                    returnKeyType="done"
                    secureTextEntry={false}
                    style={
                      {
                        "backgroundColor": "transparent",
                        "color": "#171717",
                        "flex": 1,
                        "fontFamily": undefined,
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "400",
                        "height": "100%",
                        "paddingBottom": 8,
                        "paddingLeft": 12,
                        "paddingRight": 12,
                        "paddingTop": 8,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                dataSet={{}}
                style={
                  {
                    "alignItems": "center",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  colorScheme="primary"
                  dataSet={{}}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#0891b2",
                      "borderRadius": 4,
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "marginTop": 20,
                      "paddingBottom": 10,
                      "paddingLeft": 12,
                      "paddingRight": 12,
                      "paddingTop": 10,
                      "width": 200,
                    }
                  }
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                    test={true}
                  >
                    <View
                      dataSet={{}}
                      style={{}}
                    >
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#fafafa",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Start Reporting
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenStack>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Navigation test suite renders timeline screen 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenStack
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        nativeBackButtonDismissalEnabled={false}
        onAppear={[Function]}
        onDisappear={[Function]}
        onDismissed={[Function]}
        onHeaderBackButtonClicked={[Function]}
        onNativeDismissCancelled={[Function]}
        onTransitionProgress={[Function]}
        onWillDisappear={[Function]}
        replaceAnimation="push"
        stackPresentation="push"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        swipeDirection="horizontal"
      >
        <RNSScreenStackHeaderConfig
          backButtonInCustomView={false}
          backgroundColor="rgb(255, 255, 255)"
          color="#0891b2"
          direction="ltr"
          disableBackButtonMenu={false}
          hidden={false}
          hideBackButton={false}
          largeTitleHideShadow={false}
          title="Timeline"
          titleColor="rgb(28, 28, 30)"
          topInsetEnabled={false}
          translucent={false}
        >
          <RNSScreenStackHeaderSubview
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            type="left"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "marginLeft": 25,
                  },
                  {
                    "opacity": 1,
                  },
                ]
              }
              testID="timeline-screen-settings-button"
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#0891b2",
                      "fontSize": 32,
                    },
                    undefined,
                    {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
                testID="timeline-screen-settings-button-settings-outline"
              >
                
              </Text>
            </View>
          </RNSScreenStackHeaderSubview>
          <RNSScreenStackHeaderSubview
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            type="right"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "marginRight": 25,
                  },
                  {
                    "opacity": 1,
                  },
                ]
              }
              testID="timeline-screen-record-button"
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#0891b2",
                      "fontSize": 32,
                    },
                    undefined,
                    {
                      "fontFamily": "ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
                testID="timeline-screen-record-button-add-circle-outline"
              >
                
              </Text>
            </View>
          </RNSScreenStackHeaderSubview>
        </RNSScreenStackHeaderConfig>
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          style={
            {
              "flex": 1,
              "flexDirection": "column-reverse",
            }
          }
        >
          <View
            style={
              [
                {
                  "flex": 1,
                },
                {
                  "backgroundColor": "rgb(242, 242, 242)",
                },
                undefined,
              ]
            }
          >
            <Text
              dataSet={{}}
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#171717",
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "letterSpacing": 0,
                  "lineHeight": 21,
                  "textAlign": "center",
                  "textDecorationLine": undefined,
                }
              }
            >
              No Internet Connection
            </Text>
            <RCTScrollView
              ListEmptyComponent={[Function]}
              contentContainerStyle={
                [
                  {},
                  {
                    "dataSet": {},
                  },
                  {},
                ]
              }
              data={[]}
              dataSet={{}}
              getItem={[Function]}
              getItemCount={[Function]}
              keyExtractor={[Function]}
              onContentSizeChange={[Function]}
              onEndReached={[Function]}
              onEndReachedThreshold={5}
              onLayout={[Function]}
              onMomentumScrollBegin={[Function]}
              onMomentumScrollEnd={[Function]}
              onRefresh={[Function]}
              onScroll={[Function]}
              onScrollBeginDrag={[Function]}
              onScrollEndDrag={[Function]}
              refreshControl={
                <RefreshControlMock
                  onRefresh={[Function]}
                  refreshing={false}
                />
              }
              refreshing={false}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              stickyHeaderIndices={[]}
              style={{}}
              testID="timeline-screen-flatlist"
              viewabilityConfigCallbackPairs={[]}
            >
              <RCTRefreshControl />
              <View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "backgroundColor": "#34d399",
                      "width": "100%",
                    }
                  }
                >
                  <Text
                    dataSet={{}}
                    style={
                      {
                        "backgroundColor": undefined,
                        "color": "#171717",
                        "fontFamily": undefined,
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "letterSpacing": 0,
                        "lineHeight": 21,
                        "textAlign": "center",
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Example Record
                  </Text>
                </View>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  dataSet={{}}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={{}}
                  testID="1234"
                >
                  <View
                    dataSet={{}}
                    style={
                      {
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                      }
                    }
                  >
                    <View
                      dataSet={{}}
                      style={{}}
                    >
                      <View
                        dataSet={{}}
                        style={
                          {
                            "flexDirection": "row",
                          }
                        }
                      >
                        <View
                          dataSet={{}}
                          style={
                            {
                              "width": "15%",
                            }
                          }
                        >
                          <View
                            dataSet={{}}
                            style={
                              {
                                "alignItems": "center",
                                "backgroundColor": "#f0abfc",
                                "borderColor": "#27272a",
                                "borderRadius": 9999,
                                "height": 48,
                                "justifyContent": "center",
                                "marginTop": 4,
                                "position": "relative",
                                "width": 48,
                              }
                            }
                          >
                            <Text
                              dataSet={{}}
                              style={
                                {
                                  "backgroundColor": undefined,
                                  "color": "#fafafa",
                                  "fontFamily": undefined,
                                  "fontSize": 16,
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                  "textDecorationLine": undefined,
                                }
                              }
                            >
                              HI
                            </Text>
                          </View>
                        </View>
                        <View
                          dataSet={{}}
                          style={
                            {
                              "paddingRight": 4,
                              "width": "78%",
                            }
                          }
                        >
                          <View
                            dataSet={{}}
                            style={
                              {
                                "marginLeft": 8,
                              }
                            }
                          >
                            <Text
                              dataSet={{}}
                              style={
                                {
                                  "backgroundColor": undefined,
                                  "color": "#171717",
                                  "fontFamily": undefined,
                                  "fontSize": 14,
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                  "letterSpacing": 0,
                                  "lineHeight": 21,
                                  "textDecorationLine": undefined,
                                }
                              }
                            >
                              Helpful Individual
                            </Text>
                            <View
                              dataSet={{}}
                              style={{}}
                            />
                            <Text
                              dataSet={{}}
                              style={
                                {
                                  "backgroundColor": undefined,
                                  "color": "#171717",
                                  "fontFamily": undefined,
                                  "fontSize": 14,
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 21,
                                  "textDecorationLine": undefined,
                                }
                              }
                            >
                              Community Scientist
                            </Text>
                            <View
                              dataSet={{}}
                              style={{}}
                            />
                            <Text
                              dataSet={{}}
                              style={
                                {
                                  "backgroundColor": undefined,
                                  "color": "#db2777",
                                  "fontFamily": undefined,
                                  "fontSize": 14,
                                  "fontStyle": "normal",
                                  "fontWeight": "700",
                                  "letterSpacing": 0,
                                  "lineHeight": 21,
                                  "textDecorationLine": undefined,
                                }
                              }
                            >
                              Sample, 2022-04-01
                            </Text>
                          </View>
                        </View>
                        <View
                          dataSet={{}}
                          style={{}}
                        />
                        <View
                          dataSet={{}}
                          style={
                            {
                              "width": "7%",
                            }
                          }
                        />
                      </View>
                      <View
                        dataSet={{}}
                        style={{}}
                      />
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#171717",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        White Chuck Glacier, Glacier Peak Wilderness, WA
                      </Text>
                      <View
                        dataSet={{}}
                        style={{}}
                      />
                      <Text
                        dataSet={{}}
                        style={
                          {
                            "backgroundColor": undefined,
                            "color": "#171717",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Dark red algae in runnels
                      </Text>
                    </View>
                  </View>
                  <Image
                    accessibilityLabel="static image"
                    alt="static image"
                    dataSet={{}}
                    onError={[Function]}
                    source={1}
                    style={
                      {
                        "maxWidth": "100%",
                      }
                    }
                  />
                </View>
                <View
                  dataSet={{}}
                  style={
                    {
                      "backgroundColor": "#d6d3d1",
                      "height": 12,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </RCTScrollView>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenStack>
  </View>
</RNCSafeAreaProvider>
`;
